[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
combine_as_imports = true
force_sort_within_sections = true
multi_line_output = 3
profile = "black"

[tool.poetry]
authors = ["sakost <23290721+sakost@users.noreply.github.com>"]
description = ""
name = "pybunnynet-storage"
version = "0.1.0"

[tool.poetry.dependencies]
httpx = "^0.23.3"
pydantic = "^1.10.4"
python = "^3.10"

[tool.poetry.dev-dependencies]
autoflake = "^2.0.0"
black = "^22.12.0"
isort = "^5.11.4"
toml-sort = "^0.22.1"
